--- a/forum/flaskr/templates/forum/index.html
+++ b/forum/flaskr/templates/forum/index.html
@@ -4,7 +4,7 @@
 <ul>
   {% for category in categories %}
    <li>
-   <p>{{category.title}} </p>
+    <a href={{ url_for('forum.category', category_id=category.id)}}>{{ category.title }}</a>
    </li>
   {% endfor %}
 </ul>
