--- a/forum/flaskr/static/style.css
+++ b/forum/flaskr/static/style.css
@@ -1,26 +1,125 @@
-html { font-family: sans-serif; background: #eee; padding: 1rem; }
-body { max-width: 960px; margin: 0 auto; background: white; }
-h1 { font-family: serif; color: #377ba8; margin: 1rem 0; }
+html { font-family: sans-serif; background-color: rgb(45, 169, 218); padding: 6rem;  }
+
+
+body { background-size: auto;
+    border: 1px solid black;
+    background-color: rgb(93, 205, 240);
+    box-shadow: 5px 10px 100px #01181a;
+    border-radius: 20px;
+    padding-top: 50px;
+    padding-right: 50px;
+    padding-bottom: 50px;
+    padding-left: 50px; }
+
+
+h1 { font-family: serif; color: #ffffff; margin: 1rem 0; }
+a:link, a:visited {
+    background-color: #000000;
+    border: 1px solid rgb(0, 0, 0);
+    border-radius: 20px;
+    color: rgb(255, 255, 255);
+    padding: 14px 25px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+  }
+span {
+    text-align: center;
+    margin: auto;
+    font-weight: bold;
+    font-size: 30px;
+    
+}
+
+  a:hover, a:active {
+    background-color: rgb(5, 152, 189);
+  }
+
+
 a { color: #377ba8; }
-hr { border: none; border-top: 1px solid lightgray; }
-nav { background: lightgray; display: flex; align-items: center; padding: 0 0.5rem; }
+
+hr { border: none;
+     border-top: 10px solid rgb(9, 138, 189);
+     box-shadow: 10px 10px 20px #01181a;}
+
+
+nav { background: rgb(5, 152, 189);
+    border-radius: 10px;
+    box-shadow: 10px 10px 20px #01181a;
+    display: flex; 
+    align-items: center; 
+    padding: 0 0.5rem; }
+
+
 nav h1 { flex: auto; margin: 0; }
 nav h1 a { text-decoration: none; padding: 0.25rem 0.5rem; }
+
 nav ul  { display: flex; list-style: none; margin: 0; padding: 0; }
-nav ul li a, nav ul li span, header .action { display: block; padding: 0.5rem; }
-.content { padding: 0 1rem 1rem; }
-.content > header { border-bottom: 1px solid lightgray; display: flex; align-items: flex-end; }
+nav ul li a, nav ul li span, header .action { display: block;
+                                              padding: 0.5rem;}
+                                              
+                                              
+ ul { list-style-type: none; }
+                                            
+ .content { padding: auto;   position: static;  }
+
+ 
+.content > header { background: rgb(5, 152, 189);
+    border-radius: 10px;
+    box-shadow: 10px 20px 30px #01181a;
+    display: flex; 
+    align-items: center; 
+    padding: 1px; }
 .content > header h1 { flex: auto; margin: 1rem 0 0.25rem 0; }
-.flash { margin: 1em 0; padding: 1em; background: #cae6f6; border: 1px solid #377ba8; }
+
+.flash { margin: 1em 0; 
+    padding: 4em;
+    background: #ffffff;
+    border-radius: 10px;
+    box-shadow: 10px 20px 20px #01181a;
+    border: 1px solid #377ba8; }
+
 .post > header { display: flex; align-items: flex-end; font-size: 0.85em; }
 .post > header > div:first-of-type { flex: auto; }
 .post > header h1 { font-size: 1.5em; margin-bottom: 0; }
-.post .about { color: slategray; font-style: italic; }
+.post .about { color: rgb(250, 251, 253);
+               font-style: italic; 
+               font-weight: bold;
+               }
+
 .post .body { white-space: pre-line; }
 .content:last-child { margin-bottom: 0; }
-.content form { margin: 1em 0; display: flex; flex-direction: column; }
+.content form { 
+                /* margin: 200px; */
+                 width: 30%;
+                border-radius: 20px;
+                border: 1px solid rgb(41, 19, 19);
+                box-shadow: 10px 20px 20px #01181a;
+                background-color: #47bad6;
+                padding: 70px; }
 .content label { font-weight: bold; margin-bottom: 0.5em; }
-.content input, .content textarea { margin-bottom: 1em; }
+.content input, .content textarea, select {
+    width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+  }
 .content textarea { min-height: 12em; resize: vertical; }
 input.danger { color: #cc2f2e; }
-input[type=submit] { align-self: start; min-width: 10em; }
+input[type=submit] {
+    width: 100%;
+    background-color: #218da8;
+    
+    color: white;
+    padding: 14px 20px;
+    margin: 8px 0;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+  }
+  input[type=submit]:hover {
+    background-color: #068dcc;
+  }
