--- a/forum/flaskr/templates/forum/posts.html
+++ b/forum/flaskr/templates/forum/posts.html
@@ -3,7 +3,7 @@
 {% block header %}
   <h1>{% block title %}Posts{% endblock %}</h1>
   {% if g.user %}
-    <a class="action" href="{{ url_for('forum.create') }}" thread_id=thread.id>New</a>
+    <a class="action" href="{{ url_for('forum.create')}}">New</a>
   {% endif %}
 {% endblock %}
 
