updated login screen

--- a/forum/flaskr/templates/auth/login.html
+++ b/forum/flaskr/templates/auth/login.html
@@ -1,16 +1,21 @@
-flaskr/templates/auth/login.html¶
+
 {% extends 'base.html' %}
 
-{% block header %}
-  <h1>{% block title %}Log In{% endblock %}</h1>
-{% endblock %}
+
 
 {% block content %}
   <form method="post">
-    <label for="username">Username</label>
-    <input name="username" id="username" required>
-    <label for="password">Password</label>
-    <input type="password" name="password" id="password" required>
-    <input type="submit" value="Log In">
+      <h2>Login</h2>
+  <div class="input-container">
+    <i class="fa fa-user icon"></i>
+    <input class="input-field" type="text" placeholder="Username" name="usrnm">
+  </div>
+
+  <div class="input-container">
+    <i class="fa fa-key icon"></i>
+    <input class="input-field" type="password" placeholder="Password" name="psw">
+  </div>
+    <button type="submit" class="btn">Register</button>
   </form>
 {% endblock %}
+
