--- a/forum/flaskr/templates/auth/register.html
+++ b/forum/flaskr/templates/auth/register.html
@@ -1,19 +1,15 @@
 {% extends 'base.html' %}
 
+{% block header %}
+  <h1>{% block title %}Register{% endblock %}</h1>
+{% endblock %}
 
 {% block content %}
   <form method="post">
-    <h2>Register Form</h2>
-  <div class="input-container">
-    <i class="fa fa-user icon"></i>
-    <input class="input-field" type="text" placeholder="Username" name="usrnm">
-  </div>
-
-  <div class="input-container">
-    <i class="fa fa-key icon"></i>
-    <input class="input-field" type="password" placeholder="Password" name="psw">
-  </div>
-
-  <button type="submit" class="btn">Register</button>
+    <label for="username">Username</label>
+    <input name="username" id="username" required>
+    <label for="password">Password</label>
+    <input type="password" name="password" id="password" required>
+    <input type="submit" value="Register">
   </form>
 {% endblock %}
