--- a/forum/flaskr/templates/auth/register.html
+++ b/forum/flaskr/templates/auth/register.html
@@ -1,3 +1,6 @@
+<script src="https://www.google.com/recaptcha/api.js"></script>
+  <div class="g-recaptcha brochure__form__captcha" data-sitekey="6LfgVtsZAAAAAOUBCK0CNW5tEz8UyW8k5pmJf3dR"></div>
+
 {% extends 'base.html' %}
 
 {% block header %}
@@ -13,3 +16,21 @@
     <input type="submit" value="Register">
   </form>
 {% endblock %}
+<script>
+  function reCaptcha($recaptcha){
+  $secret = "6LfgVtsZAAAAAMdW0V4JYEEOcQu_wy8pxhCZ69Yb";
+  $ip = $_SERVER['REMOTE_ADDR'];
+
+  $postvars = array("secret",$secret, "response",$recaptcha, "remoteip",$ip);
+  $url = "https://www.google.com/recaptcha/api/siteverify";
+  $ch = curl_init();
+  curl_setopt($ch, CURLOPT_URL, $url);
+  curl_setopt($ch, CURLOPT_RETURNTRANSFER, 1);
+  curl_setopt($ch, CURLOPT_TIMEOUT, 10);
+  curl_setopt($ch, CURLOPT_POSTFIELDS, $postvars);
+  $data = curl_exec($ch);
+  curl_close($ch);
+
+  return json_decode($data, true);
+}
+</script>
