--- a/flaskr/templates/forum/posts.html
+++ b/flaskr/templates/forum/posts.html
@@ -13,7 +13,7 @@
       <article class="post">
         <header>
           <div>
-           <div class="about">by {{ g.user['username'] }} on {{ post['created'].strftime('%Y-%m-%d') }}</div>
+           <div class="about">by {{ post['author_id'] }} on {{ post['created'].strftime('%Y-%m-%d') }}</div>
           </div>
           {% if g.user['id'] == post['author_id'] %}
             <a class="action" href="{{ url_for('forum.update', id=post['id']) }}">Edit</a>
